creating slack channels

--- a/src/classes/SlackAPIToolKit.cls
+++ b/src/classes/SlackAPIToolKit.cls
@@ -30,12 +30,12 @@ public with sharing class SlackAPIToolKit {
 
         HttpResponse response = new Http().send(createRequest(slackURL, 'POST', parameters, header, body));
 
-        if(response.getStatusCode() == 200){
-            System.debug(response.getBody());
-            Map<String, String> deserialize = (Map<String, String>)JSON.deserializeUntyped(response.getBody());
-            String channelId = deserialize.get('Id');
-            System.debug(channelId);
-        }
+//        if(response.getStatusCode() == 200){
+//            System.debug(response.getBody());
+//            Map<String, String> deserialize = (Map<String, String>)JSON.deserializeUntyped(response.getBody());
+//            String channelId = deserialize.get('Id');
+//            System.debug(channelId);
+//        }
     }
     private static HttpRequest createRequest(String endpoint, String requestMethod, Map<String, String> parameters,
             Map<String, String> headers, String body) {
