--- a/src/classes/getAllContactSObjects.cls
+++ b/src/classes/getAllContactSObjects.cls
@@ -7,22 +7,11 @@ public with sharing class getAllContactSObjects {
         Map<String, Schema.SObjectField> fieldMap = Contact.SObjectType.getDescribe().fields.getMap();
         Set<String> fieldNames = fieldMap.keySet();
         String tmp = '';
-        List<Contact> listContactFields = new List<Contact>();
         for (String str : fieldNames) {
-            tmp += str.substring(0,1).toUpperCase() + str.substring(1) + ', ';
-            if(tmp.length() > 500){
-                tmp += tmp.substring(0, tmp.length()-2);
-                listContactFields.addAll(chock(str));
-                tmp = '';
-            }
+            tmp += str + ',';
         }
-        tmp = tmp.substring(0, tmp.length()-2);
-        listContactFields.addAll(chock(tmp));
-        return listContactFields;
-    }
-
-    public static List<Contact> chock(String str){
-        List<Contact> listContactFields = Database.query('SELECT ' + str + ' FROM Contact');
+        tmp = tmp.substring(0, tmp.length()-1);
+        List<Contact> listContactFields = Database.query('SELECT ' + tmp + ' FROM Contact');
         return listContactFields;
     }
 
