--- a/src/classes/getAllContactSObjects.cls
+++ b/src/classes/getAllContactSObjects.cls
@@ -4,13 +4,9 @@
 
 public with sharing class getAllContactSObjects {
     public static List<Contact> getAllContactField() {
-        Map<String, Schema.SObjectField> fieldMap = Contact.SObjectType.getDescribe().fields.getMap();
-        Set<String> fieldNames = fieldMap.keySet();
-        String tmp = '';
-        for (String str : fieldNames) {
-            tmp += str + ',';
-        }
-        tmp = tmp.substring(0, tmp.length()-1);
+        List<String> fieldNames = new List<String>(
+                Schema.getGlobalDescribe().get('Contact').getDescribe().fields.getMap().keySet());
+        String tmp = String.join(fieldNames, ',');
         List<Contact> listContactFields = Database.query('SELECT ' + tmp + ' FROM Contact');
         return listContactFields;
     }
