--- a/src/classes/QueryBuilderTest.cls
+++ b/src/classes/QueryBuilderTest.cls
@@ -3,12 +3,22 @@
  */
 @isTest
 public with sharing class QueryBuilderTest {
+
     @isTest
     public static void checkObjects() {
         QueryBuilder.getObjects();
     }
+
     @isTest
     public static void checkFields() {
         QueryBuilder.getFields('Contact');
+    }
+
+    @isTest
+    public static void checkExecute() {
+        List<String> str = new List<String>();
+        str.add('Id');
+        str.add('Name');
+        QueryBuilder.finalExecute('Account', str);
     }
 }
