--- a/src/classes/GrandChildTriggerHandler.cls
+++ b/src/classes/GrandChildTriggerHandler.cls
@@ -4,12 +4,12 @@
 
 public with sharing class GrandChildTriggerHandler {
 
-    public static void afterInsert(List<GrandChild__c> child){
-
+    public static void afterInsert(Map<Id, GrandChild__c> child){
+        RollOut.insertQuantity(child);
     }
 
-    public static void afterUpdate(List<GrandChild__c> child){
-
+    public static void afterUpdate(Map<Id, GrandChild__c> child){
+        
     }
 
     public static void afterDelete(List<GrandChild__c> child){
