--- a/src/classes/RollOut.cls
+++ b/src/classes/RollOut.cls
@@ -7,47 +7,53 @@ public with sharing class RollOut {
     public static void insertQuantity(Map<Id, GrandChild__c> grandChild) {
         List<Account> accountList = new List<Account>();
         List<GrandChild__c> updatedChild = [SELECT Id, Contact__r.AccountId FROM GrandChild__c WHERE Id = :grandChild.keySet()];
+        Set<Id> accountIds = new Set<Id>();
 
         for (GrandChild__c child : updatedChild) {
-            for (Account account : [
-                    SELECT Id, Quantity_Child__c
-                    FROM Account
-                    WHERE Id = :child.Contact__r.AccountId
-            ]) {
-                if (child.Contact__c != null && child.Contact__r.AccountId == account.Id) {
-                    if (account.Quantity_Child__c == null) {
-                        account.Quantity_Child__c = 0;
-                    }
-                    account.Quantity_Child__c++;
-                    if (!accountList.contains(account)) {
-                        accountList.add(account);
-                    }
-                }
+            accountIds.add(child.Contact__r.AccountId);
+        }
+        Map<Id, Account> accountMap = new Map<Id, Account>([
+                SELECT Id, Quantity_Child__c
+                FROM Account
+                WHERE Id IN :accountIds
+        ]);
+
+        for (GrandChild__c child : updatedChild) {
+            Account accountId = accountMap.get(child.Contact__r.AccountId);
+            accountId.Quantity_Child__c++;
+            if (!accountList.contains(accountId)) {
+                accountList.add(accountId);
+            } else {
+                accountList.remove(accountList.size() - 1);
+                accountList.add(accountId);
             }
         }
         update accountList;
     }
 
     public static void deleteRecord(Map<Id, GrandChild__c> childMap) {
-        List<Account> accounts = new List<Account>();
         List<GrandChild__c> childToDelete = [SELECT Id, Name, Contact__r.AccountId FROM GrandChild__c WHERE Id = :childMap.keySet()];
+        List<Account> accountList = new List<Account>();
+        Set<Id> accountIds = new Set<Id>();
+        for (GrandChild__c child : childToDelete) {
+            accountIds.add(child.Contact__r.AccountId);
+        }
+        Map<Id, Account> accountMap = new Map<Id, Account>([
+                SELECT Id, Quantity_Child__c
+                FROM Account
+                WHERE Id IN :accountIds
+        ]);
 
         for (GrandChild__c child : childToDelete) {
-            for (Account account : [
-                    SELECT Id, Quantity_Child__c
-                    FROM Account
-                    WHERE Id = :child.Contact__r.AccountId
-            ]) {
-                if (child.Contact__c != null && child.Contact__r.AccountId == account.Id) {
-                    if (account.Quantity_Child__c != null && account.Quantity_Child__c != 0) {
-                        account.Quantity_Child__c--;
-                        if (!accounts.contains(account)) {
-                            accounts.add(account);
-                        }
-                    }
-                }
+            Account accountId = accountMap.get(child.Contact__r.AccountId);
+            accountId.Quantity_Child__c--;
+            if (!accountList.contains(accountId)) {
+                accountList.add(accountId);
+            } else {
+                accountList.remove(accountList.size() - 1);
+                accountList.add(accountId);
             }
         }
-        update accounts;
+        update accountList;
     }
 }
