--- a/src/classes/CustomRollOut.cls
+++ b/src/classes/CustomRollOut.cls
@@ -5,7 +5,23 @@
 public with sharing class CustomRollOut implements Database.Batchable<SObject>, Queueable {
 
 
-    public Database.QueryLocator start(Database.BatchableContext bc) {
+    public Iterable<SObject> start(Database.BatchableContext bc) {
+        List<GrandChild__c> childs = [SELECT Id, Contact__r.AccountId, Contact__c FROM GrandChild__c];
+        List<Account> accountsForZeroing = new List<Account>();
+        Set<Id> accountIds = new Set<Id>();
+        for (GrandChild__c child : childs) {
+            accountIds.add(child.Contact__r.AccountId);
+        }
+        Map<Id, Account> accountMap = new Map<Id, Account>([
+                SELECT Id, Quantity_Child__c
+                FROM Account
+                WHERE Id IN :accountIds
+        ]);
+        for (Account account : accountMap.values()) {
+            account.Quantity_Child__c = 0;
+            accountsForZeroing.add(account);
+        }
+        update accountsForZeroing;
         return Database.getQueryLocator('SELECT Id, Contact__r.AccountId, Contact__c FROM GrandChild__c');
     }
 
@@ -20,9 +36,7 @@ public with sharing class CustomRollOut implements Database.Batchable<SObject>, 
                 FROM Account
                 WHERE Id IN :accountIds
         ]);
-        for (Account account : accountMap.values()) {
-            account.Quantity_Child__c = 0;
-        }
+
         for (GrandChild__c child : scope) {
             Account accountId = accountMap.get(child.Contact__r.AccountId);
             accountId.Quantity_Child__c++;
@@ -38,28 +52,28 @@ public with sharing class CustomRollOut implements Database.Batchable<SObject>, 
 
     public void finish(Database.BatchableContext bc) {
 
-        List<String> errorMessages = new List<String>();
-        AsyncApexJob asyncApexJobs = [
-                SELECT Id, Status, NumberOfErrors, JobItemsProcessed, MethodName,
-                        TotalJobItems, CreatedBy.Email
-                FROM AsyncApexJob
-                WHERE Id = :bc.getJobId()
-        ];
-
-        Messaging.SingleEmailMessage mail = new Messaging.SingleEmailMessage();
-        String[] toAddresses = new String[]{
-                asyncApexJobs.CreatedBy.Email
-        };
-        mail.setToAddresses(toAddresses);
-        mail.setSubject('JOB Salesforce RenewalEmailNotification Finished: ' + asyncApexJobs.Status);
-        String bodyText = 'Total Job Items ' + asyncApexJobs.TotalJobItems + ' Number of records processed ' +
-                asyncApexJobs.JobItemsProcessed + ' with ' + asyncApexJobs.NumberOfErrors + ' failures.\n';
-        bodyText += 'Number of Error Messages ' + errorMessages.size() + '\n';
-        bodyText += 'Error Message' + String.join(errorMessages, '\n');
-        mail.setPlainTextBody(bodyText);
-        Messaging.sendEmail(new Messaging.SingleEmailMessage[]{
-                mail
-        });
+//        List<String> errorMessages = new List<String>();
+//        AsyncApexJob asyncApexJobs = [
+//                SELECT Id, Status, NumberOfErrors, JobItemsProcessed, MethodName,
+//                        TotalJobItems, CreatedBy.Email
+//                FROM AsyncApexJob
+//                WHERE Id = :bc.getJobId()
+//        ];
+//
+//        Messaging.SingleEmailMessage mail = new Messaging.SingleEmailMessage();
+//        String[] toAddresses = new String[]{
+//                asyncApexJobs.CreatedBy.Email
+//        };
+//        mail.setToAddresses(toAddresses);
+//        mail.setSubject('JOB Salesforce RenewalEmailNotification Finished: ' + asyncApexJobs.Status);
+//        String bodyText = 'Total Job Items ' + asyncApexJobs.TotalJobItems + ' Number of records processed ' +
+//                asyncApexJobs.JobItemsProcessed + ' with ' + asyncApexJobs.NumberOfErrors + ' failures.\n';
+//        bodyText += 'Number of Error Messages ' + errorMessages.size() + '\n';
+//        bodyText += 'Error Message' + String.join(errorMessages, '\n');
+//        mail.setPlainTextBody(bodyText);
+//        Messaging.sendEmail(new Messaging.SingleEmailMessage[]{
+//                mail
+//        });
     }
 
     public void execute(QueueableContext param1) {
