--- a/src/classes/CustomRollOut.cls
+++ b/src/classes/CustomRollOut.cls
@@ -14,10 +14,11 @@ public with sharing class CustomRollOut implements Database.Batchable<SObject>, 
 
         for (GrandChild__c child : scope) {
             if(accountMap.containsKey(child.Contact__r.AccountId)){
-                if(accountMap.get(child.Contact__r.AccountId).Quantity_Child__c == null){
-                    accountMap.get(child.Contact__r.AccountId).Quantity_Child__c = 0;
+                Account account = accountMap.get(child.Contact__r.AccountId);
+                if (account.Quantity_Child__c == null) {
+                    account.Quantity_Child__c = 0;
                 }
-                accountMap.get(child.Contact__r.AccountId).Quantity_Child__c ++;
+                account.Quantity_Child__c ++;
             }else{
                 accountMap.put(child.Contact__r.AccountId, new Account(
                         Id = child.Contact__r.AccountId,
@@ -29,28 +30,28 @@ public with sharing class CustomRollOut implements Database.Batchable<SObject>, 
 
     public void finish(Database.BatchableContext bc) {
         update accountMap.values();
-//        List<String> errorMessages = new List<String>();
-//        AsyncApexJob asyncApexJobs = [
-//                SELECT Id, Status, NumberOfErrors, JobItemsProcessed, MethodName,
-//                        TotalJobItems, CreatedBy.Email
-//                FROM AsyncApexJob
-//                WHERE Id = :bc.getJobId()
-//        ];
-//
-//        Messaging.SingleEmailMessage mail = new Messaging.SingleEmailMessage();
-//        String[] toAddresses = new String[]{
-//                asyncApexJobs.CreatedBy.Email
-//        };
-//        mail.setToAddresses(toAddresses);
-//        mail.setSubject('JOB Salesforce RenewalEmailNotification Finished: ' + asyncApexJobs.Status);
-//        String bodyText = 'Total Job Items ' + asyncApexJobs.TotalJobItems + ' Number of records processed ' +
-//                asyncApexJobs.JobItemsProcessed + ' with ' + asyncApexJobs.NumberOfErrors + ' failures.\n';
-//        bodyText += 'Number of Error Messages ' + errorMessages.size() + '\n';
-//        bodyText += 'Error Message' + String.join(errorMessages, '\n');
-//        mail.setPlainTextBody(bodyText);
-//        Messaging.sendEmail(new Messaging.SingleEmailMessage[]{
-//                mail
-//        });
+        List<String> errorMessages = new List<String>();
+        AsyncApexJob asyncApexJobs = [
+                SELECT Id, Status, NumberOfErrors, JobItemsProcessed, MethodName,
+                        TotalJobItems, CreatedBy.Email
+                FROM AsyncApexJob
+                WHERE Id = :bc.getJobId()
+        ];
+
+        Messaging.SingleEmailMessage mail = new Messaging.SingleEmailMessage();
+        String[] toAddresses = new String[]{
+                asyncApexJobs.CreatedBy.Email
+        };
+        mail.setToAddresses(toAddresses);
+        mail.setSubject('JOB Salesforce RenewalEmailNotification Finished: ' + asyncApexJobs.Status);
+        String bodyText = 'Total Job Items ' + asyncApexJobs.TotalJobItems + ' Number of records processed ' +
+                asyncApexJobs.JobItemsProcessed + ' with ' + asyncApexJobs.NumberOfErrors + ' failures.\n';
+        bodyText += 'Number of Error Messages ' + errorMessages.size() + '\n';
+        bodyText += 'Error Message' + String.join(errorMessages, '\n');
+        mail.setPlainTextBody(bodyText);
+        Messaging.sendEmail(new Messaging.SingleEmailMessage[]{
+                mail
+        });
     }
 
     public void execute(QueueableContext param1) {
